ARROW-2151: [Python] Fix conversion from np.uint64 scalars

Also add tests for ARROW-1345